--- a/index.html
+++ b/index.html
@@ -64,45 +64,51 @@
 				<section class="wrapper style1">
 					<div class="container">
 						<div class="row gtr-200">
+                        	<!-- Box 1 -->
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-paper-plane"></i>
-									<h3>This Is Important</h3>
+									<h3>Luis</h3>
 									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
 								</div>
 							</section>
-							<section class="col-4 col-12-narrower">
+							<!-- Box 2 -->
+                            <section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-pencil-alt"></i>
-									<h3>Also Important</h3>
+									<h3>Evan</h3>
 									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
 								</div>
 							</section>
-							<section class="col-4 col-12-narrower">
+							<!-- Box 3 -->
+                            <section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-wrench"></i>
-									<h3>Probably Important</h3>
+									<h3>Int VP</h3>
 									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
 								</div>
 							</section>
-							<section class="col-4 col-12-narrower">
+							<!-- Box 4 -->
+                            <section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-paper-plane"></i>
-									<h3>This Is Important</h3>
+									<h3>Treasurer</h3>
 									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
 								</div>
 							</section>
-							<section class="col-4 col-12-narrower">
+							<!-- Box 5 -->
+                            <section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-pencil-alt"></i>
-									<h3>Also Important</h3>
+									<h3>Secretary</h3>
 									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
 								</div>
 							</section>
-							<section class="col-4 col-12-narrower">
+							<!-- Box 6 -->
+                            <section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-wrench"></i>
-									<h3>Probably Important</h3>
+									<h3>Website Creator</h3>
 									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
 								</div>
 							</section>
