--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 				</section>
 
 			<!-- Highlights -->
+            <h1>Introducing the Executive Board</h1>
 				<section class="wrapper style1">
 					<div class="container">
 						<div class="row gtr-200">
